Instalador/Tetris3.0/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;D:\Antonio\SisInf2\Tetris
-d
D:\Antonio\SisInf2\Tetris\doc
-encoding
UTF-8
-charset
UTF-8
D:\Antonio\SisInf2\Tetris\VentanaPrincipal.java
<---- end of javadoc command ---->
Loading source file D:\Antonio\SisInf2\Tetris\VentanaPrincipal.java...
D:\Antonio\SisInf2\Tetris\VentanaPrincipal.java:8: error: <identifier> expected
        boton1=new 
                  ^
D:\Antonio\SisInf2\Tetris\VentanaPrincipal.java:9: error: '(' or '[' expected
    }
    ^
D:\Antonio\SisInf2\Tetris\VentanaPrincipal.java:9: error: ';' expected
    }
     ^
D:\Antonio\SisInf2\Tetris\VentanaPrincipal.java:11: error: reached end of file while parsing
}
 ^
4 errors
